--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,65 @@
-.App {
-  text-align: center;
+.wrapper {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.front-page-wrapper {
+  display: flex;
+  height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.button-container {
+  margin-top: 1em;
+}
+
+.planet {
+  animation: spin-right infinite 60s linear;
+  height: 96px;
+  position: absolute;
+  margin-top: 136px;
+  margin-left: 136px;
+}
+
+#circle-orbit-container {
+  position: relative;
+  height: 300px;
+  width: 300px;
+  margin-left: -150px;
+  margin-top: -150px;
+}
+
+#inner-orbit {
+  position: absolute;
+  width: 360px;
+  height: 360px;
+  border: 2px #3f3f3f dashed;
+  border-radius: 100%;
+  -webkit-animation: spin-right 20s linear infinite;
+  animation: spin-right 20s linear infinite;
+}
+
+.inner-orbit-cirlces {
+  position: absolute;
+  top: 140px;
+  left: -13px;
+}
+
+.content {
+  flex: 1;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.introduction {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: -10%;
+  margin-left: 10%;
 }
