--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,54 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  margin: 0 !important;
+  padding: 0 !important;
+  height: 100%;
+  font-family: 'Space Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #031924;
+  color: #ecf0f1;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.link-no-style {
+  text-decoration: none;
+  color: #ecf0f1;
+}
+
+#root {
+  height: 100%;
+}
+
+@keyframes spin-right {
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+button {
+  border: #ecf0f1 dashed 2px;
+  background-color: transparent;
+  color: #ecf0f1;
+  font-family: 'Space Mono', monospace;
+  font-size: 1em;
+  padding: .5em;
+  margin: .5em;
+}
+
+button:hover {
+  border: #ecf0f1 2px outset;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: 0;
 }
