--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   height: 100%;
+  overflow: hidden;
 }
 
 .front-page-wrapper {
@@ -43,6 +44,50 @@
   position: absolute;
   top: 140px;
   left: -13px;
+}
+
+#middle-orbit {
+  position: absolute;
+  width: 560px;
+  height: 560px;
+  top: -100px;
+  left: -100px;
+  border: 2px #4A437F dashed;
+  border-radius: 100%;
+  -webkit-animation: spin-right 60s linear infinite;
+  animation: spin-right 60s linear infinite;
+}
+
+.middle-orbit-cirlces {
+  position: absolute;
+  top: 72px;
+  left: 72px;
+  height: 20px;
+  width: 20px;
+  border-radius: 100%;
+  background-color: #4A437F;
+}
+
+#outer-orbit {
+  position: absolute;
+  width: 1000px;
+  height: 1000px;
+  top: -320px;
+  left: -320px;
+  border: 2px #1d3519 dashed;
+  border-radius: 100%;
+  -webkit-animation: spin-right 120s linear infinite;
+  animation: spin-right 120s linear infinite;
+}
+
+.outer-orbit-cirlces {
+  position: absolute;
+  top: 112px;
+  left: 150px;
+  height: 30px;
+  width: 30px;
+  border-radius: 100%;
+  background-color: #4a923d;
 }
 
 .content {
