--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -1,15 +1,34 @@
 .projects-wrapper {
     display: flex;
+    flex-direction: column;
 }
 
-.wrapper {
-    border: black dashed 2px;
-    background-color: #ecf0f1;
+.project-wrapper {
+    background-color: #07293a;
     padding: 1em;
-    margin: 1em;
-    color: black;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2em;
+    color: #ecf0f1;
+    width: 40%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .image {
-    max-width: 240px;
+    max-height: 100%;
+    width: 100%;
+}
+
+.image-wrapper {
+    margin: auto;
+    background-color: white;
+    border-radius: 4px;
+    padding: 4px;
+    width: 30%;
+}
+
+.date {
+    position: absolute;
 }
