--- a/src/About/About.css
+++ b/src/About/About.css
@@ -2,6 +2,11 @@
     display: flex;
 }
 
+.content-left {
+    margin-left: 3em;
+    margin-right: 3em;
+}
+
 .content-right {
     text-align: center;
 }
@@ -13,4 +18,10 @@
 @keyframes skill-animation { 
     0%  { width:0px;}
     100%{ width:70%;}
+}
+
+.skill-wrapper {
+    border: 2px dotted;
+    border-radius: 12px;
+    margin: 1em;
 }
