--- a/src/About/About.css
+++ b/src/About/About.css
@@ -1,27 +1,34 @@
-.content-wrapper {
-    display: flex;
+.about-wrapper {
+  display: flex;
+  height: 100%;
 }
 
 .content-left {
-    margin-left: 3em;
-    margin-right: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
 }
 
 .content-right {
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
 }
 
-.skill {   
-    animation: skill-animation 2s ease-out;
-}
-  
-@keyframes skill-animation { 
-    0%  { width:0px;}
-    100%{ width:70%;}
+.transformation1 {
+  position: absolute;
+  margin-top: -2px;
+  width: 100%;
+  height: auto;
 }
 
-.skill-wrapper {
-    border: 2px dotted;
-    border-radius: 12px;
-    margin: 1em;
+.about-me {
+  flex: 3;
+  font-family: "Montserrat", sans-serif;
+}
+
+.about-me-text {
+    line-height: 350%;
 }
