--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -1,36 +1,52 @@
 .header {
-    display: flex;
-    padding: 1.5em;
-    position: fixed;
-    width: 100%;
-    z-index: 10;
+  display: flex;
+  padding: 1.5em;
+  position: fixed;
+  width: 100%;
+  z-index: 15;
 }
 
 .earth {
-    height: 24px;
-    padding-right: 1em;
+  height: 24px;
+  padding-right: 1em;
 }
 
 .left {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .right {
-    margin-left: auto;
-    margin-right: 3em;
+  margin-left: auto;
+  margin-right: 3em;
 }
 
-.nav-wrapper {
-    display: flex;
-    list-style: none;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    padding-inline-start: 0;
-    padding-inline-end: 0;
+.nav .nav-content {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
 
-.nav-link {
-    margin-left: 3em;
+.nav-item {
+  display: inline;
+  margin-left: 2rem;
+  color: #fff;
+}
+
+.nav-item:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.nav-item-home {
+  display: flex;
+  color: #fff;
+}
+
+.nav-item-home:hover, .nav-item-home-text:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
