--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -3,6 +3,8 @@
   padding: 0;
   height: 100%;
   overflow: hidden;
+  background-color: #031924;
+  color: #ecf0f1;
 }
 
 .front-page-wrapper {
@@ -11,7 +13,7 @@
 }
 
 .button-container {
-  margin-top: 1em;
+  margin-top: 2.5em;
 }
 
 .planet {
@@ -107,4 +109,5 @@
   justify-content: center;
   margin-top: -10%;
   margin-left: 10%;
+  z-index: 10;
 }
