--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -3,17 +3,11 @@
   padding: 0;
   height: 100%;
   overflow: hidden;
-  background-color: #031924;
-  color: #ecf0f1;
 }
 
 .front-page-wrapper {
   display: flex;
   height: 100%;
-}
-
-.button-container {
-  margin-top: 2.5em;
 }
 
 .planet {
@@ -45,7 +39,7 @@
 .inner-orbit-cirlces {
   position: absolute;
   top: 140px;
-  left: -13px;
+  left: -10px;
 }
 
 #middle-orbit {
@@ -54,7 +48,7 @@
   height: 560px;
   top: -100px;
   left: -100px;
-  border: 2px #4A437F dashed;
+  border: 2px #4a437f dashed;
   border-radius: 100%;
   -webkit-animation: spin-right 60s linear infinite;
   animation: spin-right 60s linear infinite;
@@ -67,7 +61,7 @@
   height: 20px;
   width: 20px;
   border-radius: 100%;
-  background-color: #4A437F;
+  background-color: #4a437f;
 }
 
 #outer-orbit {
@@ -76,7 +70,7 @@
   height: 1000px;
   top: -320px;
   left: -320px;
-  border: 2px #1d3519 dashed;
+  border: 2px #bdc3c7 dashed;
   border-radius: 100%;
   -webkit-animation: spin-right 120s linear infinite;
   animation: spin-right 120s linear infinite;
@@ -90,6 +84,7 @@
   width: 30px;
   border-radius: 100%;
   background-color: #4a923d;
+  animation: spin-right 120s linear infinite;
 }
 
 .content {
@@ -99,7 +94,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: white;
 }
 
 .introduction {
@@ -110,4 +104,10 @@
   margin-top: -10%;
   margin-left: 10%;
   z-index: 10;
+}
+
+@media only screen and (max-width: 1000px) {
+  .content {
+    display: none;
+  }
 }
